--- a/index_ar.html
+++ b/index_ar.html
@@ -17,7 +17,7 @@
     <main class="ui-wrapper page-not-loaded">
       <!-- LOADER -->
       <div class="loader flex flex--center">
-        <span class="loader__text">الإمارات للمزادات</span>
+        <span class="loader__text" style="letter-spacing:0px !important">الإمارات للمزادات</span>
       </div>
       <!-- MAIN MENU -->
       <div class="menu">
@@ -38,7 +38,7 @@
             <div class="burger__line"></div>
             <div class="burger__line"></div>
           </div> -->
-          <div class="fixed-content-header__logo">الإمارات للمزادات</div>
+          <div class="fixed-content-header__logo" style="letter-spacing:0px !important">الإمارات للمزادات</div>
         </div>
         <a href="index.html" class="fixed-content-header__contact button button--primary" >English</a>
       </header>
@@ -68,14 +68,14 @@
           <img src="https://cdn.emiratesauction.com/static/EASite/App_Themes/Home_en/Images/EALogoSmallW.png" width="237" alt="الإمارات للمزادات">
           <br/>
           <small class="footer-copy__date"></small>
-          <small class="footer-copy__name">الإمارات للمزادات</small>
+          <small class="footer-copy__name" style="letter-spacing:0px !important">الإمارات للمزادات</small>
         </div>
       </div>
       <!-- MAIN CONTENT -->
       <div class="content">
         <div class="content-section" data-page="0">
           <div class="configuration__letters configuration__letters--hidden">
-            <span class="configuration__letters-text">الإمارات للمزادات</span>
+            <span class="configuration__letters-text" style="letter-spacing:0px !important">الإمارات للمزادات</span>
           </div>
           <div class="scroll-letters">
             <span class="scroll-letters__letter" title="S">S</span>
@@ -87,8 +87,8 @@
           </div>
         </div>
         <div class="content-section section--hidden" data-page="1">
-          <h1 class="content-section__title">الموقع تحت الصيانة</h1>
-          <p class="content-section__text"> .الموقع يخضع للصيانة الدورية حاليا<br/>سيعود للعمل قريبا</p>
+          <h1 class="content-section__title" style="letter-spacing:0px !important">الموقع تحت الصيانة</h1>
+          <p class="content-section__text" style="letter-spacing:0px !important"> .الموقع يخضع للصيانة الدورية حاليا<br/>سيعود للعمل قريبا</p>
           <!-- <button class="content-section__button button button--icon" id="button_video">
             <img class="button__image" src="./resources/images/icons/play.svg" alt="Play icon"/>
             <span class="button__text">WATCH VIDEO</span>
